<resources>
    <string name="app_name">OnMyWay</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="alert">Already have an account? Log in!</string>
    <string name="login">Login</string>
    <string name="alert_register">Don\'t have an account? Sign up!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">home_frag</string>
    <string name="bus_fragment">bus_frag</string>
    <string name="direction_fragment">dir_frag</string>
    <string name="run_fragment">run_frag</string>

    <string name="g_api_key">AIzaSyAY1JYK5CwPiED6nebPw0X1hcf0ly9lvvE</string>

    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>
    <string name="action_sign_out">Sign out</string>

    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>

    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>
    <string name="password_again">Password again</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="i_info">info</string>

</resources>
