<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="9dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/password"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:maxLines="1"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:background="@drawable/button_bg"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout1">


                <TextView android:id="@+id/link_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/register"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:visibility="invisible"/>

</RelativeLayout>


<!--<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/under_cos" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email"
        android:layout_marginTop="15dp"
        android:id="@+id/email"
        android:padding="10dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:id="@+id/password"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_bg"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_register"
        android:id="@+id/txt_sign_up"
        android:layout_marginTop="10dp"/>

</LinearLayout> -->